--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Frontend Mentor | Product preview card component</title>
-    
+
     <style>
-      .attribution { font-size: 11px; text-align: center; }
+      .attribution { margin-top: 1em; font-size: 11px; text-align: center; }
       .attribution a { color: hsl(228, 45%, 44%); }
     </style>
   </head>
